--- a/css/styles.css
+++ b/css/styles.css
@@ -815,7 +815,7 @@ img {
   width: 16px;
   height: 16px;
   border-radius: 2px;
-  position: relative;
+  /* position: relative; */
   align-items: center;
   justify-content: center;
   fill: transparent;
@@ -827,10 +827,10 @@ img {
 }
 
 .modal-check-icon {
-  position: absolute;
+  /* position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%); */
 }
 
 .check-link {
